Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5236

failed to set data, cannot locate database file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 2.0-beta
    • 2.0-beta
    • couchbase-bucket
    • Security Level: Public
    • None
    • Debian, current Couchbase checkout

    Description

      When I try to run one of the spatial tests I always get a lot of warning like:

      memcached<0.431.0>: Warning: failed to set data, cannot locate database file /home/vmx/src/couchbase/testrunner_2.0/ns_server/couch/0/default/752.couch

      When I have a look at the directory, it turns out that the couch files have a number suffix. I guess that's where the problem is.

      This blocks making the spatial tests pass.

      To run the test, just run a 4 node cluster with
      ./cluster_run -n 4
      (you can set COUCHBASE_NUM_VBUCKETS=256, to make it run faster).

      Then go to the testrunner directory and run the testrunner test with:
      ./testrunner -i b/resources/dev-4-nodes.ini -t spatialrebalancetests.SpatialRebalanceTests.test_insert_x_docs_during_rebalance,num-docs=10000

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jin Jin Lim (Inactive)
            vmx Volker Mische
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty