MB-5236 preserve vb state after vbucket deletion

Preserve vbucket state in an empty database file after
deleting a vbucket (delVBucket/reset). This is required in
order to allow backfills from a source node continue to
write items to previously reset(deleted) vbuckets.

Change-Id: I6325ca5970dbe4d73ca5bad205fd21277ed23bb3
Reviewed-on: http://review.couchbase.org/15687
Tested-by: Jin Lim <jin@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>